--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,12 @@
     <string name="modify_info">编辑资料</string>
     <string name="nick_name">昵称</string>
     <string name="release_topic">话题</string>
+    <string name="user_name">用户名</string>
+    <string name="save">保存</string>
+    <string name="my_settings">我的设置</string>
+    <string name="privacy">隐私设置</string>
+    <string name="account_and_safety">账号与安全</string>
+    <string name="teenagerModel">青少年模式</string>
+    <string name="darkTheme">深色模式</string>
+    <string name="aboutUs">关于我们</string>
 </resources>
